<resources>
    <string name="app_name">Forks N Knives</string>
    <string name="app_tagline">The Taste You Desire</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_tagline">A Simple Elegant Process</string>
    <string name="sign_up">Hi! New Here? Welcome</string>
    <string name="sign_up_tagline">Just A Few More Steps</string>
    <string name="sign_up_submit">Register</string>
    <string name="phone_num">Phone Number</string>
    <string name="verify_sms">Enter Verification Code</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="sharedpref_user_data">userdata</string>
</resources>
