<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ga.xtingerstech.forksnknives.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/forkbg"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:layout_marginTop="200dp"
            android:textStyle="bold"
            style="@style/Base.TextAppearance.AppCompat"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:text="@string/app_tagline"
            android:layout_gravity="center"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_gravity="center"
            android:padding="20dp"

            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="20dp"/>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
