<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ga.xtingerstech.forksnknives.SignUp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/forkbg"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:textStyle="bold"
            style="@style/Base.TextAppearance.AppCompat"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:text="@string/sign_up_tagline"
            android:layout_gravity="center"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/sign_up_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="20dp"
            android:inputType="text"
            android:hint="Full Name"/>

        <EditText
            android:id="@+id/sign_up_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:hint="Address"/>

        <Button
            android:id="@+id/sign_up_submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_submit"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_gravity="center"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:padding="20dp"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
