<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ga.xtingerstech.forksnknives.SignIn"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/forkbg"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:textStyle="bold"
            style="@style/Base.TextAppearance.AppCompat"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:text="@string/sign_in_tagline"
            android:layout_gravity="center"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/sign_in_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:hint="@string/phone_num"
            android:layout_marginTop="20dp"
            android:inputType="phone"/>
        <Button
            android:id="@+id/sign_in_submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_gravity="center"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:padding="20dp"
            android:layout_marginTop="20dp"/>

        <ProgressBar
            android:id="@+id/sign_in_progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/sign_in_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimary"
            android:visibility="gone"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
